--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.3",
+    "pg": "^8.11.4",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.2",
+    "typescript": "^5.4.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.1.0",
+    "ts-lint": "^4.5.1"
   }
 }
