--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "api_its",
+  "name": "api_packetpong",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon dist/app.js"
   },
   "author": "",
   "license": "ISC",
