--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-fileupload": "^1.5.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^10.2.1",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.4",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.2",
